# archive

./: .gitignore  archive.js  background.js  manifest.json  options.js  readme.md  release.ps1
.github/workflows/: release.yml
native/: Cargo.toml
native/benches/: hash.rs
native/src/: extension.rs  lib.rs  main.rs
native/tests/: hash.rs
src/: archive.js  background.js  manifest.json  options.html  options.js
