[package]
name = "archive"
version = "0.1.0"
authors = ["dagwaging <dagwaging@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrome_native_messaging = "0.2.0"
serde = "1.0.130"
serde_json = "1.0.59"
md-5 = "0.9.1"
base64 = "0.13.0"
rayon = "1.5.1"
downloader = "0.2.6"
wfd = "0.1.7"
winreg = "0.10.1"
winapi = "0.3.9"
user32-sys = "0.2.0"
